added error output

--- a/BettorKnow/Views/Fixtures/Index.cshtml
+++ b/BettorKnow/Views/Fixtures/Index.cshtml
@@ -10,3 +10,7 @@
 <div>
     The number of fixtures found was @Model.TotalFixtures.ToString(CultureInfo.InvariantCulture)
 </div>
+<br/>
+<div>
+     @Model.Error.ToString(CultureInfo.InvariantCulture)
+</div>
