--- a/BettorKnow/Views/Fixtures/Index.cshtml
+++ b/BettorKnow/Views/Fixtures/Index.cshtml
@@ -6,7 +6,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Rock and roll</h2>
+<h2>Ready to go</h2>
 <div>
     The number of fixtures found was @Model.TotalFixtures.ToString(CultureInfo.InvariantCulture)
 </div>
